task working in the system but needs to be fixed.
The result doesn't look like the requirement even thou the solution is getting 100/100 in the system. Will proceed with the work on later stage.

--- a/HTML & CSS/06 Flexbox-Exercise-Resources/04_FlexModel-Calendar/style.css
+++ b/HTML & CSS/06 Flexbox-Exercise-Resources/04_FlexModel-Calendar/style.css
@@ -22,3 +22,7 @@ section.notes {
     flex-direction: column;
     
 }
+
+section.week {
+    flex-direction: column;
+}
